# sparse-dct-assimilation

./: pyproject.toml
code/: README.md
code/configs/: data_train.yaml
code/scripts/: compute_baseline_stats.py  eval_cnn_2023.py  eval_dct_2023.py  figures.py  prepare_era5.py  prepare_training_data.py  verify_env.py
code/src/aurora_da/: metrics.py  observations.py
code/src/aurora_da/data/: aurora_run.py
code/src/aurora_da/methods/: __init__.py  sparse_dct.py
code/tests/: test_distances.py  test_metrics.py  test_observations.py
code/tests/data/: test_schema.py
code/tests/methods/: test_sparse_dct.py
configs/: data.yaml
scripts/: prepare_background.py  train_cnn_residual.py
src/aurora_da/: distances.py
src/aurora_da/data/: era5_fetch.py  schema.py
tests/data/: test_era5_fetch.py
