[project]
name = "aurora-da"
version = "0.1.0"
description = "Sparse-DCT Bayesian data assimilation for the Aurora foundation model"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<3.0",
    "scipy>=1.11",
    "xarray>=2024.1",
    "zarr>=2.17,<3",
    "gcsfs>=2024.1",
    "pyyaml>=6.0",
    "torch>=2.3",
    "microsoft-aurora>=1.5",
    "pywavelets>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aurora_da"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
